TTS 模型與參數更新 套件版本指定

--- a/.env.example
+++ b/.env.example
@@ -43,10 +43,10 @@ GOOGLE_API_KEY=YOUR_GOOGLE_API_KEY
 
 
 # Hugging Face Hub
-
-TTS_MODEL_ID="lillianhuang/orpheus-3b-ft-0813-v2-2"
-TTS_TOKENIZER_ID="lillianhuang/orpheus-3b-ft-0813-v2-2"
-TTS_DEFAULT_VOICE="speaker1"
+HUGGING_FACE_TOKEN="YOUR_HUGGINGFAC_TOKEN"
+TTS_MODEL_ID="lillianhuang/orpheus-3b-ft-0818-v2-2"
+TTS_TOKENIZER_ID="lillianhuang/orpheus-3b-ft-0818-v2-2"
+TTS_DEFAULT_VOICE="湘湘"
 
 # OpenAI API 配置
 OPENAI_API_KEY=your_openai_api_key_here
