--- a/services/ai-worker/requirements.txt
+++ b/services/ai-worker/requirements.txt
@@ -1,29 +1,38 @@
+# --- Testing ---
 pytest
 pytest-mock
+
+# --- Web/API & Cloud ---
 requests
 boto3
+minio
+
+# --- Messaging & Databases ---
 pika
 pymongo==4.8.0
+pymilvus
+redis
+
+# --- Audio & Utilities ---
 mutagen==1.47.0
-minio
+soundfile==0.13.1
+librosa==0.11.0
+pyrubberband
+opencc
+snac==1.2.1
+
+# --- High-Level AI Frameworks ---
+torch==2.3.1
+torchaudio==2.3.1
+transformers==4.55.2
+accelerate
+bitsandbytes==0.43.3
+huggingface_hub
 google-generativeai
 crewai
 crewai-tools
-openai
-pymilvus
-redis
-python-dotenv
+openai==1.99.9
 langchain-openai
-torch
-torchaudio
-transformers
-accelerate
-soundfile
-librosa
-pyrubberband
-snac
-opencc
-huggingface_hub
-dotenv
-bitsandbytes
-pydub
+
+# --- Configuration ---
+python-dotenv
