刪除不必要的目錄及其相關檔案，包括環境設定、元件、頁面和樣式檔案，進行專案重構以清理不必要的內容。

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@ node_modules
 doucment/
 API文件.csv
 .env
+voice_chat.md
+.cursorrules
+前端技術解說文件.md
+web_dashboard/
 
 # Logs
 logs
@@ -49,3 +53,4 @@ dist-ssr
 4_deployment
 design_templates
 seed_csv_output/
+web_dashboard/
