新增教育資源管理功能，包含教育項目 CRUD 操作，並整合 Milvus API 進行資料處理。更新相關配置與依賴，並優化前端介面以支援關鍵詞與備註欄位。

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,7 @@ dist-ssr
 4_deployment
 design_templates
 seed_csv_output/
+web_dashboard/
+.cursorrules
+test_education_api.py
+EDUCATION_API_README.md
