--- a/services/web-app/requirements.txt
+++ b/services/web-app/requirements.txt
@@ -22,3 +22,13 @@ line-bot-sdk==3.17.1
 mutagen==1.47.0
 apscheduler==3.10.4
 Flask-APScheduler==1.13.1
+# 向量資料庫和 AI 相關
+pymilvus==2.3.7
+openai==1.3.0
+
+# 資料處理（使用預編譯版本）
+pandas==2.0.3
+openpyxl==3.1.2
+
+# 確保 grpcio 使用預編譯版本
+grpcio>=1.57.0,<1.60.0
