--- a/.env.example
+++ b/.env.example
@@ -50,7 +50,7 @@ TTS_TOKENIZER_ID="lillianhuang/orpheus-3b-ft-0813-v2-2"
 TTS_DEFAULT_VOICE="speaker1"
 
 # OpenAI API 配置
-OPENAI_API_KEY= OPENAI_API_KEY
+OPENAI_API_KEY=OPENAI_API_KEY
 
 # 模型配置
 MODEL_NAME=gpt-4o-mini
@@ -80,4 +80,3 @@ ALERT_STREAM_GROUP=case_mgr
 # CrewAI 配置
 OTEL_SDK_DISABLED=true
 CREWAI_TELEMETRY_OPT_OUT=true
-
