更新環境配置，將 LINE Bot 和 LIFF 設定中的敏感資訊替換為佔位符，並將 .env.backup 檔案加入 .gitignore。刪除不再使用的環境變數模板，並在 Nginx 配置中新增語音 API 和任務 API 的特殊設定以支援檔案上傳和長時間處理。

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ node_modules
 doucment/
 API文件.csv
 .env
+.env.backup
 
 # Logs
 logs
@@ -53,3 +54,5 @@ web_dashboard/
 .cursorrules
 test_education_api.py
 EDUCATION_API_README.md
+docker-compose.mac.yml
+test_frontend_api_config.html
