--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -96,6 +96,65 @@ server {
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
+        
+        # 檔案上傳大小限制 (語音檔案最大16MB + buffer)
+        client_max_body_size 20M;
+    }
+    
+    # 語音API特殊配置 - 較長的超時時間用於音頻處理
+    location /api/v1/voice/ {
+        proxy_pass http://web_app_upstream;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # 語音處理需要較長時間
+        proxy_connect_timeout 120s;
+        proxy_send_timeout 120s;
+        proxy_read_timeout 300s;  # 5分鐘用於AI處理
+        
+        # 音頻檔案上傳限制
+        client_max_body_size 20M;
+        
+        # 上傳緩衝配置
+        client_body_buffer_size 128k;
+        proxy_buffering off;
+    }
+    
+    # 問卷API特殊配置 - 保護問卷提交
+    location /api/v1/patients/ {
+        proxy_pass http://web_app_upstream;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # API 超時設定
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        
+        # 檔案上傳大小限制
+        client_max_body_size 20M;
+    }
+
+    # WebSocket 支援 (Flask-SocketIO)
+    location /socket.io/ {
+        proxy_pass http://web_app_upstream;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # WebSocket 特殊配置
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_cache_bypass $http_upgrade;
+        
+        # 長連接配置
+        proxy_read_timeout 86400;
     }
 
     # Swagger 文檔代理到 Flask
