--- a/.gitignore
+++ b/.gitignore
@@ -15,12 +15,11 @@ GEMINI.md
 pe.md
 node_modules
 doucment/
-API文件.csv
 .env
 voice_chat.md
 .cursorrules
-前端技術解說文件.md
 web_dashboard/
+debug_test.py
 
 # Logs
 logs
@@ -59,3 +58,5 @@ test_education_api.py
 EDUCATION_API_README.md
 docker-compose.mac.yml
 test_frontend_api_config.html
+.roomodes
+useLIFF.README.md
