feat: 新增針對已遷移 hooks.js 功能的測試腳本
- 實作了完整的 hooks.js 測試，涵蓋登入、病人清單擷取、KPI 計算與錯誤處理。
- 確保病人 ID 與 API 回應能被正確處理，以避免常見錯誤。
- 彙整 hooks.js 的改進，包括更佳的錯誤處理與減少 API 呼叫的重試邏輯。

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,11 @@ docker-compose.mac.yml
 test_frontend_api_config.html
 .roomodes
 useLIFF.README.md
+CACHE_DEPLOYMENT_GUIDE.md
+.gitignore
+docker-compose.optimized.yml
+deploy-optimized.sh
+.gitignore
+services/web-app/Dockerfile.optimized
+infra/nginx/optimized.conf
+infra/nginx/Dockerfile.optimized
