feat: 移除不必要的 RabbitMQ 健康檢查，更新 Dockerfile 執行命令，更新資料庫遷移檔。

--- a/services/ai-worker/Dockerfile
+++ b/services/ai-worker/Dockerfile
@@ -8,4 +8,5 @@ RUN apt-get update \
     rubberband-cli \
     && rm -rf /var/lib/apt/lists/* \
     && pip install --no-cache-dir -r requirements.txt
-CMD ["python", "-u", "worker/main.py && worker/llm_app/load_article.py"]
+
+CMD sh -c "python -u worker/main.py && python -u worker/llm_app/load_article.py"
