--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -48,125 +48,7 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-    # 代理前端靜態檔案到 Flask，並設定快取
-    location /static/dist/ {
-        proxy_pass http://web_app_upstream;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # 快取靜態資源 (JS, CSS, 圖片等)
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            proxy_pass http://web_app_upstream;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # 設定快取
-            proxy_cache_valid 200 1y;
-            expires 1y;
-            add_header Cache-Control "public, no-transform";
-            access_log off;
-        }
-        
-        # HTML 檔案不快取，確保更新能及時生效
-        location ~* \.html$ {
-            proxy_pass http://web_app_upstream;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            expires -1;
-            add_header Cache-Control "no-cache, no-store, must-revalidate";
-        }
-    }
-
-    # API 請求代理到 Flask 後端
-    location /api/ {
-        proxy_pass http://web_app_upstream;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # API 超時設定
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
-        
-        # 檔案上傳大小限制 (語音檔案最大16MB + buffer)
-        client_max_body_size 20M;
-    }
-    
-    # 語音API特殊配置 - 較長的超時時間用於音頻處理
-    location /api/v1/voice/ {
-        proxy_pass http://web_app_upstream;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # 語音處理需要較長時間
-        proxy_connect_timeout 120s;
-        proxy_send_timeout 120s;
-        proxy_read_timeout 300s;  # 5分鐘用於AI處理
-        
-        # 音頻檔案上傳限制
-        client_max_body_size 20M;
-        
-        # 上傳緩衝配置
-        client_body_buffer_size 128k;
-        proxy_buffering off;
-    }
-    
-    # 問卷API特殊配置 - 保護問卷提交
-    location /api/v1/patients/ {
-        proxy_pass http://web_app_upstream;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # API 超時設定
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
-        
-        # 檔案上傳大小限制
-        client_max_body_size 20M;
-    }
-
-    # WebSocket 支援 (Flask-SocketIO)
-    location /socket.io/ {
-        proxy_pass http://web_app_upstream;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # WebSocket 特殊配置
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_cache_bypass $http_upgrade;
-        
-        # 長連接配置
-        proxy_read_timeout 86400;
-    }
-
-    # Swagger 文檔代理到 Flask
-    location /swagger/ {
-        proxy_pass http://web_app_upstream;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # 其他所有請求代理到 Flask (包括 SPA 路由)
+    # 代理到 Web App
     location / {
         proxy_pass http://web_app_upstream;
         proxy_set_header Host $host;
