--- a/infra/nginx/config/development.conf
+++ b/infra/nginx/config/development.conf
@@ -13,61 +13,7 @@ server {
     listen 80;
     # 注意：這裡不再需要 server_name，因為 ngrok 會轉發所有請求
 
-    # 語音API特殊配置 - 較長的超時時間用於音頻處理
-    location /api/v1/voice/ {
-        proxy_pass http://web_app_upstream;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto https;
-        
-        # 語音處理需要較長時間
-        proxy_connect_timeout 120s;
-        proxy_send_timeout 120s;
-        proxy_read_timeout 300s;  # 5分鐘用於AI處理
-        
-        # 音頻檔案上傳限制
-        client_max_body_size 20M;
-        client_body_buffer_size 128k;
-        proxy_buffering off;
-    }
-    
-    # API 請求代理到 Flask 後端
-    location /api/ {
-        proxy_pass http://web_app_upstream;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto https;
-        
-        # API 超時設定
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
-        
-        # 檔案上傳大小限制
-        client_max_body_size 20M;
-    }
-
-    # WebSocket 支援 (Flask-SocketIO)
-    location /socket.io/ {
-        proxy_pass http://web_app_upstream;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto https;
-        
-        # WebSocket 特殊配置
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_cache_bypass $http_upgrade;
-        
-        # 長連接配置
-        proxy_read_timeout 86400;
-    }
-
-    # 將其他請求代理到 Web App
+    # 將請求代理到 Web App
     location / {
         proxy_pass http://web_app_upstream;
         proxy_set_header Host $host;
