--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -116,7 +116,6 @@ services:
         - LIFF_CHANNEL_ID=${LIFF_CHANNEL_ID}
         - LINE_CHANNEL_SECRET=${LINE_CHANNEL_SECRET}
         - LINE_CHANNEL_ACCESS_TOKEN=${LINE_CHANNEL_ACCESS_TOKEN}
-        - VITE_API_BASE_URL=${VITE_API_BASE_URL}
     container_name: dev_web_app_service
     entrypoint: >
       sh -lc "flask db upgrade heads && flask run --host=0.0.0.0 --port=5000 --debug"
@@ -151,8 +150,17 @@ services:
       context: ./services/frontend
       dockerfile: Dockerfile
     container_name: dev_frontend_service
+    env_file:
+      - .env
     ports:
       - "3000:3000"
+    volumes:
+      # 掛載本地程式碼以啟用熱重載
+      - ./services/frontend:/app
+      # 避免 node_modules 被本地覆蓋，使用匿名 volume
+      - /app/node_modules
+    depends_on:
+      - web-app
 
   # -------------------------------------------------
   #  3. AI 服務層 (Production Mode)
