--- a/.env.example
+++ b/.env.example
@@ -70,3 +70,6 @@ ALERT_STREAM_GROUP=case_mgr
 # CrewAI 配置
 OTEL_SDK_DISABLED=true
 CREWAI_TELEMETRY_OPT_OUT=true
+
+VITE_PORT=3000
+VITE_API_BASE_URL=http://localhost:5000
