新增資料庫、排程、Line相關套件

--- a/services/ai-worker/requirements.txt
+++ b/services/ai-worker/requirements.txt
@@ -36,3 +36,11 @@ langchain-openai
 # --- Configuration ---
 python-dotenv
 pydub
+
+# --- Database Drivers ---
+psycopg2-binary
+
+# --- Scheduling & Frameworks ---
+APScheduler
+Flask
+line-bot-sdk
